# FirstSignal

./: README.md
.cursor/rules/: code_standards.mdc
frontend/: index.html  package.json
frontend/public/: manifest.json
frontend/src/: routeTree.gen.ts  types.ts
frontend/src/api/: server.ts
frontend/src/assets/css/: styles.css
frontend/src/components/: ConnectWallet.tsx  FloatingMintButton.tsx  Header.tsx  MintOverlay.tsx
frontend/src/components/connect-wallet/: ConnectButton.tsx  ConnectedProfile.tsx  ProfileHeader.tsx
frontend/src/components/magicui/: interactive-hover-button.tsx
frontend/src/routes/: index.tsx  landingpage.tsx  register.tsx  send.tsx
server/: .env.example  README.md  agent.py  app.py  pyproject.toml
server/clients/: blockchain.py  constants.py  database.py  telegram.py  utils.py
server/schemas/: app.py  database.py
server/scripts/database/: setup.sql
